# tower-web

./: .gitignore  .travis.yml  CHANGELOG.md  Cargo.toml  README.md
examples/: README.md  args.rs  catch.rs  custom_header.rs  derive_extract.rs  hello_world.rs  html_handlebars.rs  json.rs  middleware.rs  scratch.rs  static_file.rs
examples/async-await/: Cargo.toml  rust-toolchain
examples/async-await/src/: hyper.rs
examples/rustls/: Cargo.toml
examples/rustls/src/: main.rs
src/: builder.rs  call_site.rs  codegen.rs  config.rs  error.rs  extract.rs  lib.rs  net.rs  resource.rs  response.rs  route.rs  routing.rs  run.rs  service.rs  test.rs
src/codegen/: async_await.rs  callsite.rs  mod.rs
src/config/: mod.rs
src/error/: catch.rs  error.rs  map.rs  mod.rs  never.rs
src/extract/: bytes.rs  context.rs  error.rs  http.rs  http_date_time.rs  immediate.rs  mod.rs  num.rs  option.rs  osstring.rs  pathbuf.rs  serde.rs  str.rs
src/middleware/: chain.rs  deflate.rs  either.rs  identity.rs  log.rs  middleware.rs  mod.rs
src/middleware/cors/: builder.rs  config.rs  filter.rs  middleware.rs  mod.rs  service.rs
src/middleware/deflate/: middleware.rs  service.rs
src/middleware/filter/: chain.rs  mod.rs
src/middleware/log/: middleware.rs  mod.rs  service.rs
src/middleware/prometheus/: middleware.rs  mod.rs  service.rs
src/resource/: mod.rs  tuple.rs
src/response/: content_type.rs  context.rs  default_serializer.rs  either.rs  file.rs  future.rs  into_response.rs  json.rs  map_err.rs  mod.rs  option.rs  response.rs  serde.rs  serialize.rs  serializer.rs  serializer_context.rs  str.rs  vec.rs
src/routing/: builder.rs  captures.rs  condition.rs  mod.rs  params.rs  path.rs  resource.rs  route.rs  route_match.rs  service.rs  set.rs
src/service/: builder.rs  future.rs  http.rs  mod.rs  new_service.rs  payload.rs  resource.rs  web.rs
src/util/: buf_stream.rs  chain.rs  future.rs  mime_types.rs  mod.rs  never.rs  sealed.rs  tuple.rs
src/util/buf_stream/: buf_stream.rs  bytes.rs  chain.rs  collect.rs  deflate.rs  either.rs  empty.rs  file.rs  from.rs  mod.rs  size_hint.rs  std.rs  str.rs
src/util/http/: future.rs  middleware.rs  mod.rs  new_service.rs  service.rs
src/view/: handlebars.rs  mod.rs
templates/: foo.hbs
templates/examples/: hello_world.hbs
test_suite/: Cargo.toml
test_suite/tests/: derive_rsponse.rs
tests/: basic.rs  catch.rs  content_type.rs  deflate_stream.rs  empty.rs  extract.rs  gen.rs  html_handlebars.rs  methods.rs  multi_resource.rs  params.rs  resource.rs  response.rs  serializer.rs  support.rs
tests/support/: mod.rs
tests/templates/hbs/: bar.hbs  foo.hbs
tower-web-derive/: Cargo.toml
tower-web-derive/src/: lib.rs
tower-web-examples/: Cargo.toml
tower-web-examples/src/: main.rs
tower-web-macros/: Cargo.toml  README.md
tower-web-macros/src/: arg.rs  ast.rs  gen.rs  header.rs  lib.rs  parse.rs  resource.rs  route.rs  service.rs  ty_tree.rs
tower-web-macros/src/derive/: attr.rs  extract.rs  mod.rs  response.rs
tower-web-macros/src/derive/test/: mod.rs  response.rs
tower-web-macros/src/resource/: arg.rs  attr.rs  catch.rs  mod.rs  parse.rs  resource.rs  route.rs  signature.rs  ty_tree.rs
tower-web-macros/src/resource/test/: parse.rs
tower-web-macros/src/response/: mod.rs  response.rs  test.rs
util/: gen-tuple.rs
