[package]
name = "tower-web"
# When releasing to crates.io:
# - Update html_root_url.
# - Update CHANGELOG.md.
# - Update documentation URL
#   - Cargo.toml
#   - Readme.md
# - Create "v0.2.x" git tag.
version = "0.2.2"
license = "MIT"
authors = ["Carl Lerche <me@carllerche.com>"]
readme = "README.md"
repository = "https://github.com/carllerche/tower-web"
homepage = "https://github.com/carllerche/tower-web"
documentation = "http://rust-doc.s3-website-us-east-1.amazonaws.com/tower-web/v0.2.2/tower_web/"
description = """
Web framework with a focus on removing boilerplate
"""
categories = ["asynchronous", "web-programming::http-server"]

[workspace]

members = [
  "./",
  "tower-web-macros",
]

[dependencies]
bytes = "0.4.7"
futures = "0.1.21"
http = "0.1.7"
hyper = "0.12.1"
log = "0.4.1"
tokio = "0.1.6"
tokio-fs = "0.1.2"
tokio-io = "0.1.7"
tower-service = "0.1.0"

# Parsing params
atoi = "0.2.3"
checked = "0.5.0"
chrono = "0.4.4"

# Serializing responses, deserializing requests
serde = "1.0.70"
serde_derive = "1.0.70"
serde_json = "1.0.24"
serde_plain = "0.3.0"
serde_urlencoded = "0.5.1"

# Code gen
tower-web-macros = { version = "0.2.1", path = "tower-web-macros" }
proc-macro-hack = "0.4.0"

# Deflate middleware
flate2 = "1.0.2"

[dev-dependencies]
env_logger = "0.5.12"
rand = "0.5.5"
