[package]
name = "tower-web"
# When releasing to crates.io:
# - Update html_root_url.
# - Update CHANGELOG.md.
# - Update documentation URL
#   - Cargo.toml
#   - Readme.md
# - Create "v0.3.x" git tag.
# - Push documentation
version = "0.3.7"
license = "MIT"
authors = ["Carl Lerche <me@carllerche.com>"]
readme = "README.md"
repository = "https://github.com/carllerche/tower-web"
homepage = "https://github.com/carllerche/tower-web"
documentation = "https://docs.rs/tower-web/0.3.7/tower_web/"
description = """
Web framework with a focus on removing boilerplate
"""
categories = ["asynchronous", "web-programming::http-server"]
edition = "2018"

[workspace]

members = [
  "./",
  "tower-web-macros",
]

[features]
# This feature comes with no promise of stability. Things will
# break with each patch release. Use at your own risk.
async-await-preview = [
  "tokio/async-await-preview",
  "tokio-async-await/async-await-preview",
  "futures/nightly",
]
rustls = ["tokio-rustls"]
default = ["handlebars"]

[dependencies]
bytes = "0.4.7"
futures = "0.1.21"
headers = "0.2.0"
http = "0.1.7"
hyper = "0.12.1"
lazy_static = "1"
log = "0.4.1"
mime = "0.3.13"
mime_guess = "1"
percent-encoding = "1.0.1"
tokio = "0.1.6"
tokio-fs = "0.1.2"
tokio-io = "0.1.7"
tower-service = "0.1.0"
void = "1.0.2"

# Parsing params
atoi = "= 0.2.3"
checked = "0.5.0"
chrono = "0.4.4"

# Serializing responses, deserializing requests
serde = { version = "1.0.70", features = ["derive"] }
serde_json = "1.0.24"
serde_plain = "0.3.0"
serde_urlencoded = "0.5.1"

# Code gen
tower-web-macros = { version = "0.3.2", path = "tower-web-macros" }

# Deflate middleware
flate2 = "1.0.2"

# rustls support
tokio-rustls = { version = "0.8.0", optional = true }

# Handlebars support
handlebars = { version = "~1.0.3", optional = true }

# async/await support
tokio-async-await = { version = "0.1.4", optional = true }

[dev-dependencies]
env_logger = "0.5.12"
rand = "0.5.5"
