[package]
name = "tower-web-macros"
version = "0.3.1"
authors = ["Carl Lerche <me@carllerche.com>"]
readme = "README.md"
license = "MIT"
repository = "https://github.com/carllerche/tower-web"
homepage = "https://github.com/carllerche/tower-web"
documentation = "http://rust-doc.s3-website-us-east-1.amazonaws.com/tower-web/v0.3.1/tower_web/"
description = """
Macros for tower-web
"""

[lib]
proc-macro = true

[dependencies]
http = "0.1.7"
proc-macro-hack = "0.4.0"
proc-macro2 = "0.4.4"
quote = "0.6.3"
syn = { version = "0.15", features = ["full", "fold", "extra-traits"] }
